@@ -1,3 +1,15 @@
+1999-08-20  Doug Evans  <devans@casey.cygnus.com>
+
+	* genmloop.sh: New args -parallel-generic-write, -parallel-only.
+	* cgen-engine.h (SEMANTIC_FN): Don't use version with PAREXEC
+	buffer arg if WITH_PARALLEL_GENWRITE.
+	(struct insn_sem): Handle WITH_PARALLEL_GENWRITE.
+	(struct idesc): Ditto.
+
+Wed Aug 18 18:17:28 1999  Doug Evans  <devans@canuck.cygnus.com>
+
+	* sim-model.c (model_option_handler): Add \n to error message.
+
 1999-08-08  Doug Evans  <devans@casey.cygnus.com>
 
 	* cgen-engine.h (SEM_FN_NAME,SEMF_FN_NAME): Delete.
